rust/cubesqlplanner/cubesqlplanner/src/tests/snapshots/cubesqlplanner__tests__rolling_window_sql_generation__rolling_window_both_unbounded_no_granularity.snap
---
source: cubesqlplanner/src/tests/rolling_window_sql_generation.rs
expression: sql
---
 WITH 
cte_0 AS (  SELECT sum("test_cube".val) "test_cube__val_both" 
  FROM  test_data  AS "test_cube")
SELECT "fk_aggregate"."test_cube__val_both" "test_cube__val_both" 
FROM (SELECT * 
FROM  cte_0  AS "cte_0") AS "fk_aggregate"
