rust/cubesqlplanner/cubesqlplanner/src/tests/snapshots/cubesqlplanner__tests__rolling_window_sql_generation__rolling_window_leading_unbounded_no_granularity.snap
---
source: cubesqlplanner/src/tests/rolling_window_sql_generation.rs
expression: result
---
test_cube__val_leading
----------------------
180.00
