rust/cubesqlplanner/cubesqlplanner/src/tests/snapshots/cubesqlplanner__tests__rolling_window_sql_generation__rolling_window_trailing_bounded_no_granularity.snap
---
source: cubesqlplanner/src/tests/rolling_window_sql_generation.rs
expression: sql
---
 WITH 
cte_0 AS (  SELECT sum("test_cube".val) "test_cube__val_trailing_bounded" 
  FROM  test_data  AS "test_cube"
  WHERE ("test_cube".created_at >= $_0_$::timestamptz AND "test_cube".created_at <= $_1_$::timestamptz))
SELECT "fk_aggregate"."test_cube__val_trailing_bounded" "test_cube__val_trailing_bounded" 
FROM (SELECT * 
FROM  cte_0  AS "cte_0") AS "fk_aggregate"
